--- a/examples/entities.yaml
+++ b/examples/entities.yaml
@@ -42,3 +42,15 @@ spec:
     message ExampleMessage {
       string example = 1;
     };
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: janelda
+  description: Software Developer
+spec:
+  profile:
+    displayName: Janelle Dawe
+    email: janelle-dawe@example.com
+    picture: https://api.dicebear.com/7.x/avataaars/svg?seed=Leo&backgroundColor=transparent
+  memberOf: [team-a]
