--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,6 +19,7 @@
     "@axis-backstage/plugin-jira-dashboard-common": "workspace:^",
     "@axis-backstage/plugin-readme": "workspace:^",
     "@axis-backstage/plugin-statuspage": "workspace:^",
+    "@axis-backstage/plugin-vacation-calendar": "^0.1.0",
     "@backstage-community/plugin-github-actions": "^0.6.16",
     "@backstage/app-defaults": "^1.5.5",
     "@backstage/catalog-model": "^1.5.0",
