--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,6 +28,7 @@
     "@backstage/config": "^1.2.0",
     "@backstage/plugin-app-backend": "^0.3.67",
     "@backstage/plugin-auth-backend": "^0.22.5",
+    "@backstage/plugin-auth-backend-module-microsoft-provider": "^0.1.13",
     "@backstage/plugin-auth-node": "^0.4.13",
     "@backstage/plugin-catalog-backend": "^1.22.0",
     "@backstage/plugin-permission-common": "^0.7.13",
